    (Rushabh S Shah via kihwal)

    HADOOP-8691. FsShell can print "Found xxx items" unnecessarily often.
    (Daryn Sharp via wheat9)

    HADOOP-10379. Protect authentication cookies with the HttpOnly and Secure
    flags. (wheat9)

    HADOOP-10211. Enable RPC protocol to negotiate SASL-QOP values between
    clients and servers. (Benoy Antony via Arpit Agarwal)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-10320. Javadoc in InterfaceStability.java lacks final </ul>.
    (René Nyffenegger via cnauroth)
    
    HADOOP-10085. CompositeService should allow adding services while being 
    inited. (Steve Loughran via kasha)

    HADOOP-10327. Trunk windows build broken after HDFS-5746.
    (Vinay via cnauroth)

    HADOOP-10330. TestFrameDecoder fails if it cannot bind port 12345.
    (Arpit Agarwal)

    HADOOP-10326. M/R jobs can not access S3 if Kerberos is enabled. (bc Wong
    via atm)

    HADOOP-10338. Cannot get the FileStatus of the root inode from the new
    Globber (cmccabe)

    HADOOP-10249. LdapGroupsMapping should trim ldap password read from file.
    (Dilli Armugam via suresh)

    HADOOP-10346. Deadlock while logging tokens (jlowe)

    HADOOP-10328. loadGenerator exit code is not reliable.
    (Haohui Mai via cnauroth)

    HADOOP-10355. Fix TestLoadGenerator#testLoadGenerator. (Haohui Mai via jing9)

    HADOOP-10368. InputStream is not closed in VersionInfo ctor.
    (Tsuyoshi OZAWA via szetszwo)

    HADOOP-10353. FsUrlStreamHandlerFactory is not thread safe.
    (Tudor Scurtu via cnauroth)

  BREAKDOWN OF HADOOP-10184 SUBTASKS AND RELATED JIRAS

    HADOOP-10185. FileSystem API for ACLs. (cnauroth)

    HADOOP-10186. Remove AclReadFlag and AclWriteFlag in FileSystem API.
    (Haohui Mai via cnauroth)

    HADOOP-10187. FsShell CLI: add getfacl and setfacl with minimal support for
    getting and setting ACLs. (Vinay via cnauroth)

    HADOOP-10192. FileSystem#getAclStatus has incorrect JavaDocs. (cnauroth)
